# mcp-health-server-

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: patients.json
mcp_health_server/: __init__.py  __main__.py  apps.py  auth.py  data.py  fhir.py  models.py  prompts.py  resources.py  safety.py  server.py  tasks.py  telemetry.py  tools.py
tests/: conftest.py  test_auth.py  test_fhir.py  test_server.py  test_v2.py
tests/redteam/: test_authz.py  test_clinical_code_hallucination.py  test_gate_is_real.py  test_pii_leak.py  test_tool_poisoning.py
