[project]
name = "mcp-health-server"
version = "0.1.0"
description = "A Claude-compatible MCP server exposing regulated-domain health tools over synthetic data, built with strict server-side validation and PII-redacting audit logging."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Raphaela Penteado" }]
keywords = ["mcp", "model-context-protocol", "healthcare", "governance", "iso-42001"]

dependencies = [
    # SDK pinned to the stable v1 line on purpose. The v2 line (tracking the
    # 2026-07-28 spec) carries breaking changes; we do not float into it until
    # a conscious migration. See DESIGN.md "SDK version" for the rationale.
    # mcp brings starlette + uvicorn transitively for the Streamable HTTP path.
    "mcp>=1.28,<2.0",
    "pydantic>=2.7,<3.0",
    # OAuth 2.1 Resource Server: local RS256 JWT validation (no hand-rolled crypto).
    "pyjwt[crypto]>=2.8",
    # Observability: one PII-safe span per tool call.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
otlp = [
    # Only needed when MCP_OTEL_EXPORTER=otlp.
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.scripts]
mcp-health-server = "mcp_health_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_health_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
